--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Ndai</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="destination_array">
+        <item>Galana road</item>
+        <item>Westlands</item>
+        <item>TomMboya Street</item>
+        <item>Ngumba estate</item>
+        <item>iHub Kenya</item>
+        <item>UoN</item>
+        <item>Uhuru park</item>
+        <item>Garden city</item>
+    </string-array>
 </resources>
